Fixed Dockerfile, docker-compose, properties